[package]
name = "async_graphql_extras"
version = "0.1.0"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2018"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = "1.0"
quote = "1.0"
darling = "0.12.2"
proc-macro2 = "1.0.24"

[dev-dependencies]
async-graphql = "2.5.7"
warp = "0.3.0"
async-graphql-warp = "2.5.7"
tokio = { version = "1.2.0", features = ["full"] }
